[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/menu.gd" type="Script" id=1]
[ext_resource path="res://assets/hand.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://resources/theme.tres" type="Theme" id=3]

[sub_resource type="DynamicFont" id=6]
size = 25
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 25
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
size = 20
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.5
margin_top = -157.0
margin_right = 75.5
margin_bottom = 89.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 151.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 48 )
custom_fonts/font = SubResource( 6 )
text = "To the core"
align = 1
valign = 1

[node name="play" type="Button" parent="VBoxContainer"]
margin_top = 68.0
margin_right = 151.0
margin_bottom = 131.0
custom_fonts/font = SubResource( 7 )
text = "Play"

[node name="help" type="Button" parent="VBoxContainer"]
margin_top = 151.0
margin_right = 151.0
margin_bottom = 194.0
custom_fonts/font = SubResource( 8 )
text = "Help"

[node name="quit" type="Button" parent="VBoxContainer"]
margin_top = 214.0
margin_right = 151.0
margin_bottom = 250.0
custom_fonts/font = SubResource( 9 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/help" to="." method="_on_help_pressed"]
[connection signal="pressed" from="VBoxContainer/quit" to="." method="_on_quit_pressed"]
